Fixed the horizontal scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,55 @@
 @import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@10..48,200;10..48,300;10..48,400;10..48,500;10..48,600;10..48,700;10..48,800&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Yantramanav:wght@100;300;400;500;700;900&display=swap');
 
-* {
-    margin: 0;
-    padding: 0;
+
+
+/* CSS RESET */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+    box-sizing: border-box;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 
+
+/* ACTUAL CSS */
 body::-webkit-scrollbar {
     display: none;
   }
@@ -15,6 +60,14 @@ body {
     background-color: black;
     box-sizing: border-box;
 }
+
+/* MENU */
+
+
+
+
+
+
 
 
 /* HOME SCREEN */
@@ -31,11 +84,16 @@ body {
     background-color: #F93C0D; 
 }
 
+.home-screen h1 {
+    font-size: 8rem;
+    font-weight: 700;
+}
+
 
 
 /* CAROUSEL 1 */
 .wrapper {
-    background-color: #333;
+    background-color: black;
 }
 
 /* .two {
@@ -123,6 +181,11 @@ body {
 
 /* CAROUSEL 2 */
 
+.about-me {
+    font-size: 13rem;
+    font-weight: 800;
+}
+
 .individual-card-carousel-2 {
     position: absolute;
     inset: 0;
@@ -149,8 +212,9 @@ body {
 }
 
 .individual-card2-carousel-2 h2 {
-    font-size: 2.5rem;
-    padding-right: 45rem;
+    font-size: 3.5rem;
+    font-weight: 500;
+    padding-right: 40rem;
     padding-bottom: 1rem;
 }
 
@@ -172,11 +236,10 @@ body {
     align-items: center;
     color: white;
     background-color: #F93C0D;
-    
 }
 
 .your-turn h1 {
-    font-weight: 800;
+    font-weight: 900;
     font-size: 14rem;
 }
 
@@ -191,6 +254,7 @@ body {
 
 .contact h1 {
     font-size: 5rem;
+    font-weight: 500;
     text-decoration: underline;
     padding-top: 4rem;
     padding-bottom: 10rem;
@@ -198,6 +262,8 @@ body {
 
 .contact h2 {
     font-size: 6.5rem;
+    font-weight: 700;
+    padding-top: 4rem;
 }
 
 .contact h2:hover {
@@ -209,21 +275,6 @@ body {
     color: white;
     text-decoration: none;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
